tests/lean/errorOnInductionForNested.lean
inductive LazyList (α : Type u)
| nil : LazyList α
| cons (hd : α) (tl : LazyList α) : LazyList α
| delayed (t : Thunk (LazyList α)) : LazyList α

example (as : LazyList α) : True := by
  induction as
